<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.development.sam.inclass03.DisplayActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Student_label"
        android:id="@+id/studinfo"
        android:textSize="25dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Name_Label"
        android:id="@+id/textView_name"
        android:textSize="25dp"
        android:layout_below="@+id/studinfo"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/textView1"
        android:textSize="25dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/studinfo"
        android:layout_marginTop="30dp"/>

    <ImageButton

        android:id="@+id/imagebutton_1"
        android:src="@drawable/ic_action_edit"
        android:layout_marginStart="60dp"
        android:layout_width = "30dp"
        android:layout_height= "30dp"
        android:layout_toEndOf="@+id/textView1"
        android:layout_alignTop="@+id/textView1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Email_label"
        android:id="@+id/Email"
        android:layout_below="@+id/textView_name"
        android:textSize="25dp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="42dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/textView2"
        android:textSize="25dp"
        android:layout_alignTop="@+id/Email"
        android:layout_alignBottom="@+id/Email"
        android:layout_alignStart="@+id/textView1"
        android:layout_toStartOf="@+id/imagebutton_1" />

    <ImageButton

        android:id="@+id/imagebutton_2"
        android:src="@drawable/ic_action_edit"
        android:layout_marginStart="60dp"
        android:layout_width = "30dp"
        android:layout_height= "30dp"
        android:layout_toEndOf="@+id/textView2"
        android:layout_alignTop="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ProgLang_label"
        android:id="@+id/ProgLang"
        android:layout_marginTop="42dp"
        android:textSize="25dp"
        android:layout_below="@+id/Email"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/textView3"
        android:textSize="25dp"
        android:layout_alignTop="@+id/ProgLang"
        android:layout_toEndOf="@+id/ProgLang" />

    <ImageButton

        android:id="@+id/imagebutton_3"
        android:src="@drawable/ic_action_edit"
        android:layout_marginStart="25dp"
        android:layout_width = "30dp"
        android:layout_height= "30dp"
        android:layout_toEndOf="@+id/textView3"
        android:layout_alignTop="@+id/textView3" />

</RelativeLayout>
